# evore

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
ai/: evore.md  plan.md  security_audit.md  tasks.md
bot/: .env  Cargo.toml  README.md  app-config.toml
bot/src/: blockhash_cache.rs  board_tracker.rs  bot_runner.rs  bot_state.rs  bot_task.rs  client.rs  config.rs  coordinator.rs  deploy.rs  ev_calculator.rs  main.rs  manage.rs  manage_tui.rs  miner_tracker.rs  round_tracker.rs  sender.rs  shutdown.rs  slot_tracker.rs  treasury_tracker.rs  tui.rs  tx_pipeline.rs
crank/: .env.example  Cargo.toml  README.md
crank/src/: config.rs  crank.rs  lut.rs  main.rs  miner_cache.rs  sender.rs
frontend/: .env.example  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/public/: robots.txt
js-crank/: README.md  package-lock.json
js-crank/src/: index.js
ore-stats/: Cargo.toml  build.sh  ore-stats.service
ore-stats/migrations/: 20251115001_create_treasury.sql  20251115002_create_rounds.sql  20251115003_create_miners.sql  20251115004_create_miner_snapshots.sql  20251115005_create_miner_totals.sql  20251115006_create_deployments.sql  20251115007_create_deployment_squares.sql  20251115008_idxs.sql
ore-stats/src/: account_tracker.rs  admin_auth.rs  admin_routes.rs  app_error.rs  app_rpc.rs  app_state.rs  app_state_old.rs  automation_states.rs  backfill.rs  chart_routes.rs  clickhouse.rs  custom_rpc.rs  database.rs  database_old.rs  evore_cache.rs  evore_routes.rs  external_api.rs  finalization.rs  helius_api.rs  historical_routes.rs  main.rs  main_old.rs  middleware.rs  old_rpc.rs  ore_token_cache.rs  round_addresses.rs  routes.rs  rpc.rs  sse.rs  tasks.rs  tx_analyzer.rs  txn_backfill.rs  websocket.rs
program/: Cargo.toml
program/src/: consts.rs  entropy_api.rs  error.rs  instruction.rs  lib.rs  ore_api.rs  state.rs
program/src/processor/: mod.rs  process_create_deployer.rs  process_deposit_autodeploy_balance.rs  process_mm_autocheckpoint.rs  process_mm_autodeploy.rs  process_mm_deploy.rs  process_mm_full_autodeploy.rs  process_recycle_sol.rs  process_update_deployer.rs  process_withdraw_autodeploy_balance.rs
program/tests/: test.rs
sdk/: README.md  package.json
sdk/src/: accounts.d.ts  accounts.js  constants.d.ts  constants.js  instructions.d.ts  instructions.js  pda.d.ts  pda.js  transactions.d.ts  transactions.js
src/: error.rs  instruction.rs  lib.rs
src/processor/: mod.rs  process_checkpoint.rs  process_claim_ore.rs  (+4 more)
tests/: test.rs
(+128 files in other folders)
