[package]
name = "evore-bot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "evore-bot"
path = "src/main.rs"

[dependencies]
evore.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
thiserror.workspace = true

