[package]
name = "ore-stats"
version.workspace = true
edition.workspace = true

[dependencies]
# Local
evore.workspace = true

# Solana
solana-program.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-account-decoder.workspace = true

# SPL
spl-token.workspace = true
spl-associated-token-account.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bytemuck.workspace = true

# Utils
steel.workspace = true
tokio.workspace = true
dotenvy.workspace = true
thiserror.workspace = true

# Additional dependencies
anyhow = "1.0"
axum = "0.8"
bincode = "1.3"
chrono = "0.4"
const-crypto = "0.3"
num_enum.workspace = true
spl-pod = "=0.5.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "macros", "migrate"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
solana-transaction-status = "3.0"
solana-commitment-config = "3.0"
solana-account-decoder-client-types = "=2.3.11"
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
clickhouse = { version = "0.13", features = ["inserter"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["cors"] }